# client_server

./: README.md  testsend.txt
client/: .testsend.txt.swp  Cargo.toml
client/src/: file_handler.rs  main.rs
server/: Cargo.toml  users.json
server/src/: command_handler.rs  main.rs  user_manager.rs  users.json
